# study

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  autoregen.sh  configure.ac
asio/: Makefile.am  client  client.cpp  server  server.cpp
cache/: Makefile  cache-parallel.c  cache_line_bouncing  cache_line_bouncing.out  cache_line_no_bouncing  cache_line_no_bouncing.out
common/: Makefile.am  Makefile.in  com_test.hpp  com_test_main.cpp
cpu_cache/: Makefile  cache-parallel.c
exception/: Makefile  args_to_string.hpp  cubs_string.hpp  exception.h  libf1.cpp  test_argstring.cpp  test_exception  test_exception.cpp  to_string.hpp
interprocess/: Makefile  mmap.cpp  simple  simple.cpp  xsi_shm.cpp
io/: Makefile  Makefile.am  Makefile.in  o_direct_test.cpp  test.sh  test_read  test_read.cpp
m4/: ax_cxx_compile_stdcxx_14.m4
map/: Makefile  Makefile.am  Makefile.in  map.cpp  map_test.cpp  tst.hpp
sha1/: .sha1.hpp.swp  Makefile  Makefile.am  Makefile.in  sha1.hpp  sha1_test.cpp  sourceme.sh
sha1/sha1/: .shatest.cpp.swp  Makefile  sha1.cpp  sha1.h  shatest.cpp
sha1/vectors/: .Readme.txt.swp  Readme.txt
shm_cache/: .shm_cache.cpp.swp  Makefile  Makefile.am  Makefile.in  NativeLog.txt  shm_cache.cpp  xsi_shm.hpp
simd/: Makefile  Makefile.in  pshfub.cpp  varint.hpp  x86cpuid.cpp  x86simd.hpp
simd/unittest/: Makefile  Makefile.am  Makefile.in  g8iutable_2.txt  g8iutable_4.txt  g8iutable_8.txt  test_varint.cpp  test_x86simd.cpp
src/: Makefile.am  Makefile.in  cubs_string.hpp  emcpp35_1.cpp  test_argstring.cpp  test_bgl.cpp  test_chrono.cpp  test_thread.cpp
type_traits/: Makefile  Makefile.am  Makefile.in  ir_typetraits  ir_typetraits.cpp  ir_typetraits.hpp  typetraits.hpp
unittest/: README  valgrind.sup
unittest/example/: BasicFunctionTest.cpp  Makefile
vectors/: .byte-messages.sha1.swp
