AC_INIT([ps], [1.0], [kisow@naver.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CXX
AX_CXX_COMPILE_STDCXX_11
AX_PTHREAD
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
				 Makefile
				 io/Makefile
				 map/Makefile
				 simd/Makefile
				 simd/unittest/Makefile
				 type_traits/Makefile
				 sha1/Makefile
				 shm_cache/Makefile
				 src/Makefile
				 ])
AC_OUTPUT
